--- a/configs/zero3.config
+++ b/configs/zero3.config
@@ -5,9 +5,9 @@ CONFIG_TARGET_sunxi_cortexa53_DEVICE_xunlong_orangepi-zero3=y
 
 # Set Firmware Size
 CONFIG_TARGET_KERNEL_PARTSIZE=128
-CONFIG_TARGET_ROOTFS_PARTSIZE=4960
+CONFIG_TARGET_ROOTFS_PARTSIZE=1960
 
 # Firmware Type
 # CONFIG_TARGET_ROOTFS_TARGZ=n
-# CONFIG_TARGET_ROOTFS_EXT4FS is not set
-CONFIG_TARGET_ROOTFS_SQUASHFS=y
+# CONFIG_TARGET_ROOTFS_EXT4FS=y
+CONFIG_TARGET_ROOTFS_SQUASHFS=n
