--- a/configs/zero3.config
+++ b/configs/zero3.config
@@ -9,5 +9,6 @@ CONFIG_TARGET_ROOTFS_PARTSIZE=6960
 
 # Firmware Type
 # CONFIG_TARGET_ROOTFS_TARGZ=n
-# CONFIG_TARGET_ROOTFS_EXT4FS=y
-#CONFIG_TARGET_ROOTFS_SQUASHFS=n
+CONFIG_TARGET_ROOTFS_EXT4FS=y
+CONFIG_TARGET_ROOTFS_SQUASHFS=n
+CONFIG_GCC_PLUGIN_LATENT_ENTROPY=y
