--- a/configs/zero3.config
+++ b/configs/zero3.config
@@ -12,3 +12,4 @@ CONFIG_TARGET_ROOTFS_PARTSIZE=6960
 CONFIG_TARGET_ROOTFS_EXT4FS=y
 CONFIG_TARGET_ROOTFS_SQUASHFS=n
 CONFIG_GCC_PLUGIN_LATENT_ENTROPY=y
+KERNEL_DYNAMIC_DEBUG=y
